# Efficientdet__ros

./: README.md
efficientdet_deploy/: CMakeLists.txt  package.xml
efficientdet_deploy/include/efficientdet_deploy/: NetTf.cpp  NetTf.hpp  handler.hpp  utils.cpp  utils.h
efficientdet_deploy/launch/: play_rosbag.launch  start_all.launch  start_all_rgb.launch  start_all_thermal.launch
efficientdet_deploy/src/: efficientdet_handler.cpp  efficientdet_node.cpp
efficientdet_ros_msgs/: CMakeLists.txt  package.xml
efficientdet_ros_msgs/srv/: CheckForObjects.srv
