<?xml version="1.0"?>
<package format="2">
  <name>efficientdet_deploy</name>
  <version>1.1.4</version>
  <description>ROS Nodes for object detection using efficientdet with Tensorflow and TensorRT</description>
   <maintainer email="vijayreddy.samula@alumni.fh-aachen.de">Vijay Reddy</maintainer>
  <author email="vijayreddy.samula@alumni.fh-aachen.de">Vijay Reddy</author>
  <license>GPLv3</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <depend>OpenCV</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>roscpp</depend>
  <depend>rosbag</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>message_generation</depend>
  <depend>efficientdet_ros_msgs</depend>

  <!-- <build_export_depend>OpenCV</build_export_depend>
  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>image_transport</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rosbag</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>OpenCV</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rosbag</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend> -->
  <test_depend>rosunit</test_depend>

</package>